# Lima-camera-lambda

./: .gitignore  CMakeLists.txt  README.md  build.sh  pom.xml  pom_64.xml  pom_64_el7.xml
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: index.rst  tango.rst
include/: LambdaCamera.h  LambdaCompatibility.h  LambdaDetInfoCtrlObj.h  LambdaInclude.h  LambdaInterface.h  LambdaSyncCtrlObj.h
python/: __init__.py
sdk/include/: libxsp.h
sdk/include/fsdetector/core/: Globals.h  MemUtils.tpp  Version.h
sdk/include/fsdetector/lambda/: LambdaSysImpl.h
sip/: LambdaCamera.sip  LambdaInterface.sip
src/: LambdaCamera.P  LambdaCamera.cpp  LambdaDetInfoCtrlObj.P  LambdaDetInfoCtrlObj.cpp  LambdaInterface.P  LambdaInterface.cpp  LambdaSyncCtrlObj.P  LambdaSyncCtrlObj.cpp  Makefile
tango/: CMakeLists.txt  Lambda.py
test/: pom_64.xml
test/src/: main.cpp
test/testAcq/src/: libxsp.h  libxsp.so.2  testAcq.cpp
test/testLima/: pom_64.xml
test/testLima/src/: main.cpp
test/test_from_Xspectrum/: pom_64_el7.xml
test/test_from_Xspectrum/src/: loop_acq_lambda_c++.cpp
